project(openssl LANGUAGES CXX)

set(CMAKE_CXX_STANDARD 11)
set(CMAKE_CXX_STANDARD_REQUIRED True)

set(HEADERS
        "${CMAKE_CURRENT_LIST_DIR}/include/openssl/aes.h"
        "${CMAKE_CURRENT_LIST_DIR}/include/openssl/asn1.h"
        "${CMAKE_CURRENT_LIST_DIR}/include/openssl/asn1_mac.h"
        "${CMAKE_CURRENT_LIST_DIR}/include/openssl/asn1err.h"
        "${CMAKE_CURRENT_LIST_DIR}/include/openssl/asn1t.h"
        "${CMAKE_CURRENT_LIST_DIR}/include/openssl/async.h"
        "${CMAKE_CURRENT_LIST_DIR}/include/openssl/asyncerr.h"
        "${CMAKE_CURRENT_LIST_DIR}/include/openssl/bio.h"
        "${CMAKE_CURRENT_LIST_DIR}/include/openssl/bioerr.h"
        "${CMAKE_CURRENT_LIST_DIR}/include/openssl/blowfish.h"
        "${CMAKE_CURRENT_LIST_DIR}/include/openssl/bn.h"
        "${CMAKE_CURRENT_LIST_DIR}/include/openssl/bnerr.h"
        "${CMAKE_CURRENT_LIST_DIR}/include/openssl/buffer.h"
        "${CMAKE_CURRENT_LIST_DIR}/include/openssl/buffererr.h"
        "${CMAKE_CURRENT_LIST_DIR}/include/openssl/camellia.h"
        "${CMAKE_CURRENT_LIST_DIR}/include/openssl/cast.h"
        "${CMAKE_CURRENT_LIST_DIR}/include/openssl/cmac.h"
        "${CMAKE_CURRENT_LIST_DIR}/include/openssl/cmp.h"
        "${CMAKE_CURRENT_LIST_DIR}/include/openssl/cmp_util.h"
        "${CMAKE_CURRENT_LIST_DIR}/include/openssl/cmperr.h"
        "${CMAKE_CURRENT_LIST_DIR}/include/openssl/cms.h"
        "${CMAKE_CURRENT_LIST_DIR}/include/openssl/cmserr.h"
        "${CMAKE_CURRENT_LIST_DIR}/include/openssl/comp.h"
        "${CMAKE_CURRENT_LIST_DIR}/include/openssl/comperr.h"
        "${CMAKE_CURRENT_LIST_DIR}/include/openssl/conf.h"
        "${CMAKE_CURRENT_LIST_DIR}/include/openssl/conf_api.h"
        "${CMAKE_CURRENT_LIST_DIR}/include/openssl/conferr.h"
        "${CMAKE_CURRENT_LIST_DIR}/include/openssl/configuration.h"
        "${CMAKE_CURRENT_LIST_DIR}/include/openssl/conftypes.h"
        "${CMAKE_CURRENT_LIST_DIR}/include/openssl/core.h"
        "${CMAKE_CURRENT_LIST_DIR}/include/openssl/core_dispatch.h"
        "${CMAKE_CURRENT_LIST_DIR}/include/openssl/core_names.h"
        "${CMAKE_CURRENT_LIST_DIR}/include/openssl/core_object.h"
        "${CMAKE_CURRENT_LIST_DIR}/include/openssl/crmf.h"
        "${CMAKE_CURRENT_LIST_DIR}/include/openssl/crmferr.h"
        "${CMAKE_CURRENT_LIST_DIR}/include/openssl/crypto.h"
        "${CMAKE_CURRENT_LIST_DIR}/include/openssl/cryptoerr.h"
        "${CMAKE_CURRENT_LIST_DIR}/include/openssl/cryptoerr_legacy.h"
        "${CMAKE_CURRENT_LIST_DIR}/include/openssl/ct.h"
        "${CMAKE_CURRENT_LIST_DIR}/include/openssl/cterr.h"
        "${CMAKE_CURRENT_LIST_DIR}/include/openssl/decoder.h"
        "${CMAKE_CURRENT_LIST_DIR}/include/openssl/decodererr.h"
        "${CMAKE_CURRENT_LIST_DIR}/include/openssl/des.h"
        "${CMAKE_CURRENT_LIST_DIR}/include/openssl/dh.h"
        "${CMAKE_CURRENT_LIST_DIR}/include/openssl/dherr.h"
        "${CMAKE_CURRENT_LIST_DIR}/include/openssl/dsa.h"
        "${CMAKE_CURRENT_LIST_DIR}/include/openssl/dsaerr.h"
        "${CMAKE_CURRENT_LIST_DIR}/include/openssl/dtls1.h"
        "${CMAKE_CURRENT_LIST_DIR}/include/openssl/e_os2.h"
        "${CMAKE_CURRENT_LIST_DIR}/include/openssl/ebcdic.h"
        "${CMAKE_CURRENT_LIST_DIR}/include/openssl/ec.h"
        "${CMAKE_CURRENT_LIST_DIR}/include/openssl/ecdh.h"
        "${CMAKE_CURRENT_LIST_DIR}/include/openssl/ecdsa.h"
        "${CMAKE_CURRENT_LIST_DIR}/include/openssl/ecerr.h"
        "${CMAKE_CURRENT_LIST_DIR}/include/openssl/encoder.h"
        "${CMAKE_CURRENT_LIST_DIR}/include/openssl/encodererr.h"
        "${CMAKE_CURRENT_LIST_DIR}/include/openssl/engine.h"
        "${CMAKE_CURRENT_LIST_DIR}/include/openssl/engineerr.h"
        "${CMAKE_CURRENT_LIST_DIR}/include/openssl/err.h"
        "${CMAKE_CURRENT_LIST_DIR}/include/openssl/ess.h"
        "${CMAKE_CURRENT_LIST_DIR}/include/openssl/esserr.h"
        "${CMAKE_CURRENT_LIST_DIR}/include/openssl/evp.h"
        "${CMAKE_CURRENT_LIST_DIR}/include/openssl/evperr.h"
        "${CMAKE_CURRENT_LIST_DIR}/include/openssl/fips_names.h"
        "${CMAKE_CURRENT_LIST_DIR}/include/openssl/fipskey.h"
        "${CMAKE_CURRENT_LIST_DIR}/include/openssl/hmac.h"
        "${CMAKE_CURRENT_LIST_DIR}/include/openssl/http.h"
        "${CMAKE_CURRENT_LIST_DIR}/include/openssl/httperr.h"
        "${CMAKE_CURRENT_LIST_DIR}/include/openssl/idea.h"
        "${CMAKE_CURRENT_LIST_DIR}/include/openssl/kdf.h"
        "${CMAKE_CURRENT_LIST_DIR}/include/openssl/kdferr.h"
        "${CMAKE_CURRENT_LIST_DIR}/include/openssl/lhash.h"
        "${CMAKE_CURRENT_LIST_DIR}/include/openssl/macros.h"
        "${CMAKE_CURRENT_LIST_DIR}/include/openssl/md2.h"
        "${CMAKE_CURRENT_LIST_DIR}/include/openssl/md4.h"
        "${CMAKE_CURRENT_LIST_DIR}/include/openssl/md5.h"
        "${CMAKE_CURRENT_LIST_DIR}/include/openssl/mdc2.h"
        "${CMAKE_CURRENT_LIST_DIR}/include/openssl/modes.h"
        "${CMAKE_CURRENT_LIST_DIR}/include/openssl/obj_mac.h"
        "${CMAKE_CURRENT_LIST_DIR}/include/openssl/objects.h"
        "${CMAKE_CURRENT_LIST_DIR}/include/openssl/objectserr.h"
        "${CMAKE_CURRENT_LIST_DIR}/include/openssl/ocsp.h"
        "${CMAKE_CURRENT_LIST_DIR}/include/openssl/ocsperr.h"
        "${CMAKE_CURRENT_LIST_DIR}/include/openssl/opensslconf.h"
        "${CMAKE_CURRENT_LIST_DIR}/include/openssl/opensslv.h"
        "${CMAKE_CURRENT_LIST_DIR}/include/openssl/ossl_typ.h"
        "${CMAKE_CURRENT_LIST_DIR}/include/openssl/param_build.h"
        "${CMAKE_CURRENT_LIST_DIR}/include/openssl/params.h"
        "${CMAKE_CURRENT_LIST_DIR}/include/openssl/pem.h"
        "${CMAKE_CURRENT_LIST_DIR}/include/openssl/pem2.h"
        "${CMAKE_CURRENT_LIST_DIR}/include/openssl/pemerr.h"
        "${CMAKE_CURRENT_LIST_DIR}/include/openssl/pkcs12.h"
        "${CMAKE_CURRENT_LIST_DIR}/include/openssl/pkcs12err.h"
        "${CMAKE_CURRENT_LIST_DIR}/include/openssl/pkcs7.h"
        "${CMAKE_CURRENT_LIST_DIR}/include/openssl/pkcs7err.h"
        "${CMAKE_CURRENT_LIST_DIR}/include/openssl/prov_ssl.h"
        "${CMAKE_CURRENT_LIST_DIR}/include/openssl/proverr.h"
        "${CMAKE_CURRENT_LIST_DIR}/include/openssl/provider.h"
        "${CMAKE_CURRENT_LIST_DIR}/include/openssl/rand.h"
        "${CMAKE_CURRENT_LIST_DIR}/include/openssl/randerr.h"
        "${CMAKE_CURRENT_LIST_DIR}/include/openssl/rc2.h"
        "${CMAKE_CURRENT_LIST_DIR}/include/openssl/rc4.h"
        "${CMAKE_CURRENT_LIST_DIR}/include/openssl/rc5.h"
        "${CMAKE_CURRENT_LIST_DIR}/include/openssl/ripemd.h"
        "${CMAKE_CURRENT_LIST_DIR}/include/openssl/rsa.h"
        "${CMAKE_CURRENT_LIST_DIR}/include/openssl/rsaerr.h"
        "${CMAKE_CURRENT_LIST_DIR}/include/openssl/safestack.h"
        "${CMAKE_CURRENT_LIST_DIR}/include/openssl/seed.h"
        "${CMAKE_CURRENT_LIST_DIR}/include/openssl/self_test.h"
        "${CMAKE_CURRENT_LIST_DIR}/include/openssl/sha.h"
        "${CMAKE_CURRENT_LIST_DIR}/include/openssl/srp.h"
        "${CMAKE_CURRENT_LIST_DIR}/include/openssl/srtp.h"
        "${CMAKE_CURRENT_LIST_DIR}/include/openssl/ssl.h"
        "${CMAKE_CURRENT_LIST_DIR}/include/openssl/ssl2.h"
        "${CMAKE_CURRENT_LIST_DIR}/include/openssl/ssl3.h"
        "${CMAKE_CURRENT_LIST_DIR}/include/openssl/sslerr.h"
        "${CMAKE_CURRENT_LIST_DIR}/include/openssl/sslerr_legacy.h"
        "${CMAKE_CURRENT_LIST_DIR}/include/openssl/stack.h"
        "${CMAKE_CURRENT_LIST_DIR}/include/openssl/store.h"
        "${CMAKE_CURRENT_LIST_DIR}/include/openssl/storeerr.h"
        "${CMAKE_CURRENT_LIST_DIR}/include/openssl/symhacks.h"
        "${CMAKE_CURRENT_LIST_DIR}/include/openssl/tls1.h"
        "${CMAKE_CURRENT_LIST_DIR}/include/openssl/trace.h"
        "${CMAKE_CURRENT_LIST_DIR}/include/openssl/ts.h"
        "${CMAKE_CURRENT_LIST_DIR}/include/openssl/tserr.h"
        "${CMAKE_CURRENT_LIST_DIR}/include/openssl/txt_db.h"
        "${CMAKE_CURRENT_LIST_DIR}/include/openssl/types.h"
        "${CMAKE_CURRENT_LIST_DIR}/include/openssl/ui.h"
        "${CMAKE_CURRENT_LIST_DIR}/include/openssl/uierr.h"
        "${CMAKE_CURRENT_LIST_DIR}/include/openssl/whrlpool.h"
        "${CMAKE_CURRENT_LIST_DIR}/include/openssl/x509.h"
        "${CMAKE_CURRENT_LIST_DIR}/include/openssl/x509_vfy.h"
        "${CMAKE_CURRENT_LIST_DIR}/include/openssl/x509err.h"
        "${CMAKE_CURRENT_LIST_DIR}/include/openssl/x509v3.h"
        "${CMAKE_CURRENT_LIST_DIR}/include/openssl/x509v3err.h"
        )

add_library(ssl_lib STATIC IMPORTED)
set_target_properties(ssl_lib PROPERTIES IMPORTED_LOCATION /lib/libssl.a)

add_library(crypto_lib STATIC IMPORTED)
set_target_properties(ssl_lib PROPERTIES IMPORTED_LOCATION /lib/libcrypto.a)

add_library(openssl SHARED ${HEADERS})
target_link_libraries(openssl PRIVATE ssl_lib crypto_lib)
target_include_directories(openssl PUBLIC ${HEADERS})

set_target_properties(openssl PROPERTIES LINKER_LANGUAGE CXX)